tests/compile-fail/stacked_borrows/buggy_as_mut_slice.stderr
error: Undefined Behavior: attempting a write access using <2098> at alloc967[0x4], but that tag does not exist in the borrow stack for this location
  --> $DIR/buggy_as_mut_slice.rs:15:5
   |
15 |     v1[1] = 5;
   |     ^^^^^^^^^
   |     |
   |     attempting a write access using <2098> at alloc967[0x4], but that tag does not exist in the borrow stack for this location
   |     this error occurs as part of an access at alloc967[0x4..0x8]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `main` at $DIR/buggy_as_mut_slice.rs:15:5

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

